--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
 
     <div class="container">
         <!-- Reduced font-size for the main title -->
-        <h1 style="text-align: center; margin-bottom: 2rem; color: var(--theme-text-accent); font-size: 2.2rem; font-weight: bold;">وانەکانی پۆلی یەکەم</h1>
+        <h1 style="text-align: center; margin-bottom: 2rem; color: var(--theme-text-accent); font-size: 2.2rem; font-weight: bold;"> پۆلی یەکەم</h1>
 
         <!-- Use grid for buttons -->
         <div class="home-buttons-grid">
